crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__expect_fx_moduledefs.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# expecting some effects\nexpect-fx 5 == 2\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginExpectFx
            (* Num=>Int@1 InlineBinOpEquals=>OpEquals@2 Num=>Int@3 EndBinOpEquals)
        EndExpectFx)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
ExpectFx(BinOp(IntBase10("5"), Equals, IntBase10("2")))

[=== formatted below ===]

