crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__expect_fx_moduledefs_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# expecting some effects\nexpect-fx 5 == 2\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginExpectFx
            (*
                Num=>IntBase10@1
                InlineBinOpEquals=>OpEquals@2
                Num=>IntBase10@3
            EndBinOpEquals)
        EndExpectFx)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
ExpectFx(BinOp(IntBase10("5"), Equals, IntBase10("2")))

[=== formatted below ===]

