crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__extra_newline_in_parens_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "B:{}\n\n(\na)\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            (BeginTypeRecord EndTypeRecord)
        EndTypeOrTypeAlias)
        HintExpr
        (BeginParens Ident=>LowerIdent@5 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("B"), Record([]))
Ident("a")

[=== formatted below ===]

