crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__extra_newline_in_parens_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "B : {}\n\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            (BeginTypeRecord EndTypeRecord)
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@4
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("B"), Record([]))
Ident("a")

[=== formatted below ===]

