crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__float_with_underscores_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-1_23_456.0_1_23_456\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("-1_23_456.0_1_23_456")

[=== formatted below ===]

