crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__full_app_header_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "app \"quicksort\"\n    packages { pf: \"./platform\" }\n    imports [foo.Bar.Baz]\n    provides [quicksort] to pf\n\n"
---
(BeginFile
    (BeginHeaderApp
        String=>String@1
        (BeginCollection Ident=>LowerIdent@4 String=>String@6 EndCollection)
        (BeginCollection
            Ident=>LowerIdent@10
            DotIdent=>NoSpaceDotUpperIdent@11
            DotIdent=>NoSpaceDotUpperIdent@12
        EndCollection)
        (BeginCollection Ident=>LowerIdent@16 EndCollection)
        Ident=>LowerIdent@19
    EndHeaderApp)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

